[package]
name = "peerpod"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
base64 = "0.22.1"
derive_builder = "0.20.1"
libp2p = { version = "0.54.1", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["alloc"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "serde"] }
